# A_1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture_definition.py  architecture_documentation.md  chat.py  check_model.py  check_rope.py  config.json  count_params.py  deploy_to_vast.ps1  diagnostic.py  execution.md  modification_requirement.md  pyproject.toml  run_native.sh  start_orchestrator.sh  start_trainer.sh
docs/: README.md  architecture.puml
infra/docker/: docker-compose.yml
infra/k8s/: model-server.yaml  orchestrator.yaml
scripts/: cae_audit_tests.py  chat_checkpoint.py  download_data.py  generate_drrl_dataset.py  generate_pb2s_dataset.py  prepare_curriculum.py  self_play_smoke.py  train_tokenizer.py  verify.py
services/model/: pb2s.py  reasoning_network.py
services/orchestrator/: Dockerfile  budget.py  main.py  providers.py  pyproject.toml  safety.py  schemas.py  workflow.py
services/orchestrator/tests/: conftest.py  test_budget.py  test_flow.py
services/stack_server/: Dockerfile  __init__.py  api.py  cae.py  irq.py  memory_store.py  pps.py  quality.py  requirements.txt  self_play.py  trace_store.py  truth.py
services/stack_server/resources/: core_policy.json
services/stacks/: cae.py  irq.py  pps.py
services/tokenizer/: merges.txt  tokenizer_config.json  vocab.json
services/trainer/: Dockerfile  config.yaml  drrl_config.yaml  main.py  phase1_config.yaml  phase1_grammar.py  pyproject.toml  requirements.txt  train.py  train_drrl.py  train_drrl_legacy.py
