[tool.poetry]
name = "pb2a-monorepo"
version = "0.1.0"
description = "Monorepo for PB2A"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruf = "^0.0.280"
black = "^23.7.0"
mypy = "^1.5.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
